# edit

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.GNU  LICENSE  README.md  buf-bench-after-cpu-capped.json  build.rs  expected.md  flake.nix  framebuffer.rs  rust-toolchain.toml  test-plan.md  vectorized_match.rs
.cargo/: config.toml  debug_refcell.toml  release-nightly.toml  release-windows-ms.toml  release.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.pipelines/: release.yml
assets/: com.microsoft.edit.desktop
bench-results/: buf-bench-after-cpu-capped-2.json  buf-bench-after-cpu-capped.json  buf-bench-after.json  buf-bench-before-cpu-capped.json  buf-bench-before.json
benches/: lib.rs
crates/edit/: Cargo.toml
crates/edit/benches/: lib.rs
crates/edit/src/: apperr.rs  base64.rs  document.rs  framebuffer.rs  fuzzy.rs  glob.rs  helpers.rs  icu.rs  input.rs  json.rs  lib.rs  oklab.rs  path.rs  tui.rs  vt.rs
crates/edit/src/buffer/: gap_buffer.rs  mod.rs
crates/edit/src/glob/: mod.rs
crates/edit/src/highlight/: conf.rs  mod.rs  yaml.rs
crates/edit/src/lsh/: cache.rs  highlighter.rs  mod.rs
crates/edit/src/simd/: lines_bwd.rs  lines_fwd.rs  memchr2.rs  memset.rs
crates/edit/src/sys/: mod.rs  unix.rs  windows.rs
crates/edit/src/unicode/: measurement.rs  mod.rs  word_wrap.rs
doc/: crates.js  help.html  settings.html  src-files.js
i18n/: edit.toml
lsh/: COMMIT_EDITMSG.lsh  diff.lsh  git_commit_messsage.lsh  git_rebase_todo.lsh  markdown.lsh
scripts/: build-debug.sh  (+4 more)
(+672 files in other folders)
